[package]
name = "block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bigint = "3.0.0"
bincode = "1.3.3"
bs58 = "0.5.0"
chrono = "0.4.30"
futures = "0.3.28"
once_cell = "1.18.0"
ring = "0.16.20"
rust-crypto = "0.2.36"
serde = { version = "1", features = ["derive"] }
sled = "0.34.7"
thiserror = "1.0.48"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
libp2p = { version = "0.39",  features = ["tcp-tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
serde_json = "1"

[[bin]]
name = "server"
path = "src/server.rs"
